// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPhoneInput should render correctly 1`] = `
<span
  className="bpk-phone-input"
>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    name="Dialing code"
    onChange={[Function]}
    value="44"
  >
    <option
      value="44"
    >
      +44
    </option>
    <option
      value="55"
    >
      +55
    </option>
  </select>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "disabled" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={true}
    id="dialing-code"
    name="Dialing code"
    onChange={[Function]}
    value="44"
  >
    <option
      value="44"
    >
      +44
    </option>
    <option
      value="55"
    >
      +55
    </option>
  </select>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={true}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "large" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <select
    aria-invalid={false}
    className="bpk-select bpk-select--large bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    name="Dialing code"
    onChange={[Function]}
    value="44"
  >
    <option
      value="44"
    >
      +44
    </option>
    <option
      value="55"
    >
      +55
    </option>
  </select>
  <input
    aria-invalid={false}
    className="bpk-input bpk-input--large bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "valid" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    name="Dialing code"
    onChange={[Function]}
    value="44"
  >
    <option
      value="44"
    >
      +44
    </option>
    <option
      value="55"
    >
      +55
    </option>
  </select>
  <input
    aria-invalid={false}
    className="bpk-input bpk-input--valid bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "wrapperProps" attribute 1`] = `
<span
  aria-label="container"
  className="bpk-phone-input container"
>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    name="Dialing code"
    onChange={[Function]}
    value="44"
  >
    <option
      value="44"
    >
      +44
    </option>
    <option
      value="55"
    >
      +55
    </option>
  </select>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a dialing code image attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <div
    className="bpk-select-wrapper bpk-phone-input__dialing-code-wrapper dialing-wrapper"
  >
    <span
      className="bpk-select-wrapper__image"
    />
    <select
      aria-invalid={false}
      className="bpk-select bpk-select--with-image bpk-phone-input__dialing-code dialing-code"
      disabled={false}
      id="dialing-code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </div>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    placeholder="Telephone number"
    type="number"
    value="1234"
  />
</span>
`;
